bin/test/Fall_21_Test_Cases/Good/LO-2/lvl2-good-medium-km.lo
// good test case
// Function return value is discarded
// Expected: 0

int fun1 ( int a )
{
int c;
{
c = (a * 5);
return c;
}
}

int main ( )
{
int a, b;
{
a = 5;
b = fun1 ( a );
return 0;
}
}
