bin/test/Fall_21_Test_Cases/Bad/LO-1/lvl1-bad-medium-6.lo
// *Bad testcase*
// Declaration after statements
// Points = 3

int main() {
    int a, b, c;
    {
      a = 10;
      int d,
      d = 0;
      return d;
    }
}